# opti-ff

./: .gitignore  NVDA_DUAL_strategy_market_data.csv  NVO_strategy_market_data.csv  OB5X_202612_F_strategy_market_data.csv  XOM_strategy_market_data.csv  live_collector_and_trader.ipynb  main.py  pyproject.toml  test_trader.ipynb  trader.py
common/: collect.py  collect_strategy_data.py  data_analysis.ipynb  libs.py  plot_nvda_dual_prices.py
common/.ipynb_checkpoints/: nvda_dual_trader-checkpoint.py
data/: AMZN_strategy_market_data.csv  JPM_strategy_market_data.csv  NVDA_DUAL_strategy_market_data.csv  NVDA_strategy_market_data.csv  NVO_DUAL_strategy_market_data.csv  NVO_strategy_market_data.csv  OB5X_202609_F_strategy_market_data.csv  OB5X_202703_F_strategy_market_data.csv  OB5X_ETF_strategy_market_data.csv  __init__.py  collect.py  collect_strategy_data.py  data_analysis.ipynb  mrev.ipynb  plot_dual_data.py  plot_dual_prices.py  plot_nvda_dual_prices.py  plotting.py
data/.ipynb_checkpoints/: collect_strategy_data-checkpoint.py  data_analysis-checkpoint.ipynb  mrev-checkpoint.ipynb
data/csv/: OB5X_202609_F_strategy_market_data.csv  OB5X_202612_F_strategy_market_data.csv  XOM_strategy_market_data.csv
ess lab/: ESS Exercise (FF26).ipynb
ess lab/.ipynb_checkpoints/: ESS Exercise (FF26)-checkpoint.ipynb
optibook_guides/: code_snippets.ipynb
optibook_guides/.ipynb_checkpoints/: code_snippets-checkpoint.ipynb
vol lab/: my_submission.csv  target_vars.csv  variance_prediction.ipynb  variance_prediction_library.py
(+3 files in other folders)
